--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <title>Document</title>
     <script type="text/javascript" src="./index.js" defer=""></script>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
